fix player layout to work on mobile landscape views final

--- a/client/src/css/playersheet.css
+++ b/client/src/css/playersheet.css
@@ -47,3 +47,6 @@
 .playerSheet .info-header {
   font-size: 1.5vw;
 }
+.mobileFix {
+  margin: 3vh 0 3vh 0;
+}
